DD-88: Fix time slider spacing

--- a/src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSliderContainer/TimeSlider.scss
+++ b/src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSliderContainer/TimeSlider.scss
@@ -96,7 +96,7 @@
 
     .timeSliderExpanded {
         color: $gold;
-        bottom: 8px;
+        bottom: 10px;
         width: 100%;
     }
 
